--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="header-contact">
             <a href="mailto:tanurenaldi02@gmail.com"><i class="fas fa-envelope"></i> tanurenaldi02@gmail.com</a>
             <a href="tel:083811084511"><i class="fas fa-phone"></i> 083811084511</a>
-            <a href="http://www.linkedin.com/in/tanurenaldi16" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-            <span><i class="fas fa-map-marker-alt"></i> Cigombong, Bogor</span>
+            <a href="http://www.linkedin.com/in/tanurenaldi16" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn.com/in/tanurenaldi16</a>
+            <span><i class="fas fa-map-marker-alt"></i> Cigombong, Kabupaten Bogor</span>
         </div>
     </div>
 </header>
@@ -44,7 +44,7 @@
         
         <div class="profile-description">
             <p> 
-                Saya adalah tenaga kerja berpengalaman di bidang operasional ritel dengan spesialisasi dalam pengelolaan stok, penerimaan dan penataan barang, serta pengoperasian mesin kasir dan sistem POS. Memiliki latar belakang pendidikan di bidang sains serta terbiasa bekerja secara cepat, teliti, dan sesuai prosedur. Kemampuan komunikasi yang baik, disiplin, serta keterampilan menggunakan Microsoft Office mendukung saya dalam menangani tugas-tugas administratif dan operasional secara efisien. Saat ini, saya siap mengembangkan karier di perusahaan manufaktur dan distribusi sebagai bagian dari tim logistik, produksi, atau administrasi.
+                Saya berpengalaman di bidang operasional ritel dengan spesialisasi dalam pengelolaan stok, penerimaan dan penataan barang, serta pengoperasian mesin kasir dan sistem POS. Memiliki latar belakang pendidikan di bidang sains serta terbiasa bekerja secara cepat, teliti, dan sesuai prosedur. Kemampuan komunikasi yang baik, disiplin, serta keterampilan menggunakan Microsoft Office mendukung saya dalam menangani tugas-tugas administratif dan operasional secara efisien. Saat ini, saya siap mengembangkan karier di perusahaan manufaktur dan distribusi sebagai bagian dari tim logistik, produksi, atau administrasi.
             </p>
         </div>
     </div>
